[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Tài <hotai1806@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.19.2"
PyJWT = "^2.3.0"
Flask-Migrate = "^3.1.0"
Werkzeug = "^2.0.3"
invalid = "^0.0.1"
requests = "^2.27.1"
uuid = "^1.30"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
